# quickscript

./: .gitignore  README.md  pyproject.toml  test.py
docs/: index.html
docs/source/: conf.py
docs/source/_autosummary/: quickscript.scripts.ArgumentCollector.rst  quickscript.scripts.Script.rst  quickscript.scripts.rst
quickscript/: __init__.py  scripts.py
