[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_chess"
authors = [
    {name = "Mark Zimmerman", email = "mzimm003@gmail.com"},
]
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_chess","my_chess.*"]