[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quickscript"
authors = [
    {name = "Mark Zimmerman", email = "mzimm003@gmail.com"},
]
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "quickscript"}

[tool.setuptools.packages.find]
where = ["quickscript"]
include = ["quickscript"]

[project.urls]
Homepage = "https://github.com/mzimm003/quickscript"
Issues = "https://github.com/mzimm003/quickscript/issues"
Documentation = "https://mzimm003.github.io/quickscript/"